# student-society-event-planner

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Documents/: report.md
input_files/: input_small.txt
input_files/invalid/: input_invalid_1.txt  input_invalid_2.txt  input_invalid_3.txt  input_invalid_4.txt
src/: main.py
src/student_society_event_planner/: algorithms.py  classes.py  utils.py
tests/: helpers.py  test_bottom_up.py  test_bruteforce.py  test_utils.py
