[project]
name = "student-society-event-planner"
version = "0.1.0"
description = "ECM1414 Coursework for Group 28"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[tool.ruff]
target-version = "py312"
lint.select = ["E", "F", "D", "W", "N", "ANN", "LOG", "PT", "UP"]
lint.ignore = ["D100", "ANN204", "D105", "D107", "PT011"]
lint.per-file-ignores = { "tests/test_*" = ["D", "ANN"], "__init__.py" = ["D"]}

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
